# crates.surf

./: .gitignore  .prettierrc  Cargo.toml  README.md  docker-compose.yml  justfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/: index.html
client/src/: App.svelte
src/: arguments.rs  channel_ext.rs  consumer.rs  db.rs  elasticsearch_ext.rs  index.rs  main.rs  publisher.rs  server.rs  subcommand.rs
