[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = "0.6.18"
clap = { version = "4.3.10", features = ["derive"] }
crates_io_api = "0.8.1"
elasticsearch = "8.5.0-alpha.1"
futures = "0.3.28"
futures-lite = "1.13.0"
http = "0.2.9"
lapin = "2.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
