[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.6.20"
clap = { version = "4.5.7", features = ["derive"] }
crates_io_api = "0.8.2"
elasticsearch = "8.5.0-alpha.1"
futures = "0.3.30"
futures-lite = "1.13.0"
http = "0.2.12"
lapin = "2.3.4"
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
